# ChessPlayer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/chess_player/: BoardDrawer.py  ChessPlayer.py  MainChessApp.py  SettingsManager.py  __init__.py  app_styles.py  board_extraction.py  board_state_utils.py  configureBoardWindow.py  keyEventHandler.py  main.py  show_move.py
src/chess_player/settings/: settings.json
